# C-Practice_projects

./: README.md  helloworld.cpp
Design_Patterns/: Singleton.cpp  singleton
IPC/messge_que/: readme.md  receiver  receiver.cpp  sender  sender.cpp
IPC/shared_memory/: reader  reader.cpp  writer  writer.cpp
IPC/signal/: signal  signal.cpp
Socket_Programming/: CMakeLists.txt  client.cpp  server.cpp
behavioral/: observer.cpp
creational/: singleton  singleton1.cpp
execute_method/: CMakeLists.txt
execute_method/inc/: Application.h
execute_method/src/: Application.cpp  main.cpp
json/: requirement.txt
json/read_json/: CMakeLists.txt  json_read.cpp
json/write_json/: CMakeLists.txt  json_create  json_creation.cpp  output.json
linkedlist/: list  list.cpp
multithreading/: threads.cpp  threds
pointer/: pointer1.cpp  pointr1
sqlite_cpp/: CMakeLists.txt  example_cpp.db  main.cpp  requirement.txt
stl_containers/: unordered_set.cpp  uset  vec  vec3  vec4  vector  vector.cpp  vector2.cpp  vector3.cpp  vector4.cpp
template_usage/: class  class_template.cpp  fun  function_template.cpp
